# xlManage

./: .coverage  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pytest.ini
_dev/: architecture.md  epics.md  prd.md  product-brief.md
_dev/reports/: audit-architecture-2026-02-06.md  epic01-story01-implémentation.md  epic01-story02-implémentation.md  epic01-story03-implémentation.md  epic01-story04-implémentation.md  epic05-story01-implémentation.md  epic05-story02-amelioration.md  epic05-story02-implémentation.md  epic05-story03-implementation.md  epic06-story01-implémentation.md  epic06-story02-implémentation.md  epic06-story03-implémentation.md  epic06-story04-implémentation.md  epic06-story05-implémentation.md  epic06-story06-implémentation.md  epic06-story07-implementation-report.md  epic07-story01-implementation-report.md  epic07-story02-implementation-report.md  epic07-story03-implementation-report.md  epic07-story04-implementation-report.md  epic07-story05-implementation-report.md  epic07-story06-implementation-report.md  epic07-story07-implementation-report.md  epic08-story01-report.md  epic08-story02-report.md  epic08-story03-report.md  epic08-story04-report.md  epic08-story05-report.md  epic08-story06-report.md  epic09-story01-report.md  epic09-story02-report.md  epic09-story03-report.md  epic09-story04-report.md  epic09-story05-report.md  epic09-story06-report.md  epic09-story07-report.md  epic10-story01-implementation-report.md  epic10-story02-implementation-report.md  epic11-story01-implementation.md  epic11-story02-implementation.md  (+6 more)
_dev/stories/: epic01-story01.md  epic01-story02.md  epic01-story03.md  epic01-story04.md  epic05-story01.md  epic05-story02.md  (+12 more)
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  usage.rst
examples/: README.md
tests/: conftest.py  test_calculation_optimizer.py  test_cli.py  test_cli_optimize.py  test_cli_run_macro.py  test_cli_stop.py  test_cli_vba.py  test_coverage.py  test_excel_enumeration.py  test_excel_force_kill.py  test_excel_manager.py  test_excel_optimizer.py  test_excel_stop.py  test_exceptions.py  test_macro_parser.py  test_macro_runner.py  test_sample.py  test_screen_optimizer.py  test_table_manager.py  test_vba_exceptions.py  test_vba_manager_delete.py  test_vba_manager_export_list.py  test_vba_manager_import.py  test_vba_manager_init.py  test_vba_utilities.py  test_workbook_manager.py  test_worksheet_manager.py
(+145 files in other folders)
